<resources>
    <string name="app_name">Random Words</string>
    <string name="strFinalScore">You win! Your final score is:</string>
    <string name="strLose">You lost! Your final score is 0.0 points.</string>

    <string name="strErrorAPI">An error occurred retrieving the word</string>
    <string name="strErrorCharacter">You can only introduce a single character</string>
    <string name="strLetterNotCorrect">The word does not contain this letter</string>

    <string name="strNewPlayer">New Player</string>
    <string name="strStartGame">Start Game</string>
    <string name="strWelcome">Welcome</string>
    <string name="hintNickname">Enter your nickname</string>
    <string name="strNickname">What is your nickname?</string>
    <string name="hintLetterWord">Write a letter/word</string>

    <string name="strTotalScore">Total Score:</string>
    <string name="strExPos">1.</string>
    <string name="strExNick">Kyoka</string>
    <string name="strTotalGames">Total Games:</string>
    <string name="strExTotalGames">50</string>
    <string name="strExTotalScore">200</string>

    <string name="strAddLetter">Add Letter</string>
    <string name="strWholeWord">Introduce whole word</string>
    <string name="strOnCancel">Do you want to exit the game?</string>
    <string name="strLoading">Loading word...</string>
    <string name="strYes">Yes</string>
    <string name="strNo">No</string>
    <string name="strOK">Ok</string>
    <string name="strGoBack">Go To Home</string>
    <string name="strCancel">Cancel</string>
    <string name="strScore">Score:</string>
</resources>